# u.leti.9892.3sem-2020.programming.4lab

./: .gitignore  CMakeLists.txt  README.md
report/: report_lr4.tex
report/modules/chapters/: conclusion.tex  data_structures_description.tex  functions_description.tex  goal.tex  programm_algorithm.tex  task_defenition.tex  tests.tex
report/resourses/: class_diagram.drawio
src/: cmd.cpp  cmd.h  main.cpp  truck_db.cpp  truck_db.h  truck_list.cpp  truck_list.h
